fixing button hover on mobile

--- a/src/styles/Button.scss
+++ b/src/styles/Button.scss
@@ -46,8 +46,10 @@
         background: $light-yellow;
         box-shadow: inset 0 -.8rem 0 hsl(39, 83%, 44%);
 
-        &:hover {
-            background-color: $light-yellow-hover;
+        @media not all and (hover: none) {
+            &:hover {
+                background-color: $light-yellow-hover;
+            }
         }
 
         &.btn-md {
@@ -59,8 +61,10 @@
         background: $light-blue;
         box-shadow: inset 0 -.8rem 0 hsl(178, 78%, 31%);
 
-        &:hover {
-            background-color: $light-blue-hover;
+        @media not all and (hover: none) {
+            &:hover {
+                background-color: $light-blue-hover;
+            }
         }
 
         &.btn-md {
@@ -72,8 +76,10 @@
         background: $silver;
         box-shadow: inset 0 -.8rem 0 hsl(199, 17%, 51%);
 
-        &:hover {
-            background-color: $silver-hover;
+        @media not all and (hover: none) {
+            &:hover {
+                background-color: $silver-hover;
+            }
         }
 
         &.btn-md {
